# decision-modulation-core

./: .gitignore  PARAMETER_INDEX.md  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml
dmc_core/: __init__.py  version.py
dmc_core/compat/: __init__.py
dmc_core/dmc/: __init__.py  guards.py  modulator.py  policy.py  risk_policy.py
dmc_core/dmc/guards_generic/: __init__.py  circuit_breaker.py  cooldown.py  error_rate.py  ops_health.py  rate_limit.py  staleness.py
dmc_core/metrics/: __init__.py  pnl_metrics.py
dmc_core/schema/: __init__.py
dmc_core/security/: __init__.py  policy.py
docs/: ARCHITECTURE.md  DEPENDENCY_CLEANUP.md  FORMULAS.md  INTEGRATION_GUIDE.md  PUBLIC_RELEASE_GUIDE.md  SAFETY_LIMITATIONS.md
docs/examples/: README.md
docs/examples/example_domain_legacy_v0/: FORMULAS_legacy.md  GUARDS_AND_FORMULAS_legacy.md  guards.py  metrics.py  policy.py
tests/: test_guards.py  test_invariant_0_domain_agnosticism.py  test_invariant_2_no_cross_core_imports.py  test_invariant_3_guard_order_determinism.py  test_invariant_4_fail_closed.py  test_invariant_ci_0_workflow_hygiene.py  test_invariant_schema_pin_minor_2.py  test_invariant_version_single_source.py  test_live_gating.py  test_ops_health_guard.py  test_packet_schema.py  test_pkg_1_no_examples_packaged.py  test_schema_dependency.py  test_schema_deprecation_warning.py
