[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "dmc-core"
version = "0.1.0"
description = "Decision Modulation Core: Risk-aware decision layer for modulating MDM proposals"
requires-python = ">=3.11"
dependencies = ["numpy>=1.24", "pydantic>=2.0", "decision-schema>=0.1,<0.2"]

[project.optional-dependencies]
dev = ["pytest>=7", "ruff"]

[tool.setuptools.packages.find]
where = ["."]
include = ["dmc_core*"]
